tests/invalid/missing_semicolon.ar
fn main() {
    const i = 0
}

//! tests/invalid/missing_semicolon.ar:3:1: error: expected `;`, got `}`
